update setting api
